--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/socialite": "^5.8",
-        "laravel/tinker": "^2.8"
+        "laravel/socialite": "^5.9",
+        "laravel/tinker": "^2.8",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
