--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.9",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
