--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
@@ -26,15 +29,17 @@
         "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.9",
         "phpstan/phpstan": "^1.0",
-        "spatie/laravel-ignition": "^2.0"
+        "slevomat/coding-standard": "^8.15",
+        "spatie/laravel-ignition": "^2.0",
+        "squizlabs/php_codesniffer": "^3.10"
     },
     "autoload": {
         "psr-4": {
-        "App\\": "app/",
+            "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
-        "files":[
+        "files": [
             "App/Helpers/FunctionalHelper.php",
             "App/Helpers/ResponseHelper.php",
             "App/Helpers/FilterSearchHelper.php",
