--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "doctrine/dbal": "^3.8",
         "google/cloud-firestore": "^1.43",
         "guzzlehttp/guzzle": "^7.2",
         "jenssegers/agent": "^2.6",
