--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,60 @@
+version: '3.9'
+
 services:
-    app:
+    api:
         container_name: htain-thein
         build:
-            context: ./
+            context: .
+            dockerfile: Dockerfile
+        working_dir: /var/www
         volumes:
-            - .:/var/www/html
-        ports:
-            - "8080:80"
+            - .:/var/www
+            - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
         environment:
             - APP_ENV=local
             - APP_DEBUG=true
+            - DB_CONNECTION=${DB_CONNECTION}
+            - DB_HOST=${DB_HOST}
+            - DB_PORT=${DB_PORT}
+            - DB_DATABASE=${DB_DATABASE}
+            - DB_USERNAME=${DB_USERNAME}
+            - DB_PASSWORD=${DB_PASSWORD}
         depends_on:
-            - mysql_db   # Ensure MySQL container is started first
+            - mysql_db
+        networks:
+            - htain-thein-network
+
+    web_server:
+        image: nginx:latest
+        volumes:
+            - .:/var/www
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+        ports:
+            - "8000:80"
+        depends_on:
+            - api
         networks:
             - htain-thein-network
 
     mysql_db:
         image: mysql:latest
-        container_name: htain-thein-mysql
         restart: always
         ports:
-            - "3306:3306"
+            - "3308:3306"
         environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}  # Using Docker Compose env vars directly
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
-            MYSQL_USER: ${MYSQL_USER}
-            MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+            - MYSQL_DATABASE=${DB_DATABASE}
+            - MYSQL_USER=${DB_USERNAME}
+            - MYSQL_PASSWORD=${DB_PASSWORD}
+        volumes:
+            - mysql_data:/var/lib/mysql
         networks:
             - htain-thein-network
 
-    networks:
-        htain-thein-network:
-            driver: bridge
+volumes:
+    mysql_data:
+        driver: local
+
+networks:
+    htain-thein-network:
+        driver: bridge
