--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,12 @@ services:
         volumes:
             - .:/var/www
             - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
+            - ./firebase_credentials.json:/firebase_credentials.json
+
+        env_file:
+            - .env
         environment:
-            - APP_ENV=local
-            - APP_DEBUG=true
-            - DB_CONNECTION=${DB_CONNECTION}
-            - DB_HOST=${DB_HOST}
-            - DB_PORT=${DB_PORT}
-            - DB_DATABASE=${DB_DATABASE}
-            - DB_USERNAME=${DB_USERNAME}
-            - DB_PASSWORD=${DB_PASSWORD}
+            - FIREBASE_CREDENTIALS=/firebase_credentials.json
         depends_on:
             - mysql_db
         networks:
@@ -41,9 +38,8 @@ services:
         restart: always
         ports:
             - "3308:3306"
-        environment:
-            - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-            - MYSQL_DATABASE=${DB_DATABASE}
+        env_file:
+            - .env
         volumes:
             - mysql_data:/var/lib/mysql
         networks:
